--- a/TnTComponents/Styles/TnTComponents/_datagrid.scss
+++ b/TnTComponents/Styles/TnTComponents/_datagrid.scss
@@ -27,6 +27,7 @@
                 position: relative;
                 user-select: none;
                 min-width: 16px;
+                overflow: hidden;
                 @extend .tnt-title-medium;
 
                 .tnt-header-content {
