--- a/TnTComponents/Scheduler/TnTWeekView.razor
+++ b/TnTComponents/Scheduler/TnTWeekView.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Globalization
+@using TnTComponents.Core
 @using TnTComponents.Scheduler.Infrastructure
 @namespace TnTComponents
 @typeparam TEventType
@@ -43,6 +44,47 @@
                 @foreach (var date in _visibleDates)
                 {
                     <div class="tnt-event-column">
+                        @if (_events.TryGetValue(date, out var eventList))
+                        {
+                            @foreach (var @event in eventList)
+                            {
+                                var width = 90;
+                                var left = 0;
+
+                                if(@event.HeaderOverlapIndex.HasValue)
+                                {
+                                    width /= @event.HeaderOverlapCount!.Count;
+                                    left = width * @event.HeaderOverlapIndex.Value;
+                                }
+                                else if(@event.OverlapCount > 0)
+                                {
+                                    left = @event.OverlapCount * 2;
+                                    width -= @event.OverlapCount * 2;
+                                }
+
+                                var style = CssStyleBuilder.Create()
+                                    .AddVariable("tnt-event-start-hour", @event.StartTime.Hour.ToString())
+                                    .AddVariable("tnt-event-end-hour", @event.EndTime.Hour.ToString())
+                                    .AddVariable("tnt-event-start-min", @event.StartTime.Minute.ToString())
+                                    .AddVariable("tnt-event-end-min", @event.EndTime.Minute.ToString())
+                                    .AddVariable("tnt-event-bg-color", @event.BackgroundColor)
+                                    .AddVariable("tnt-event-fg-color", @event.ForegroundColor)
+                                    .AddStyle("left", left.ToString() + "%")
+                                    .AddStyle("width", width.ToString() + "%");
+
+
+
+                                <div class="tnt-event" style="@style.Build()">
+                                    <div class="tnt-event-title tnt-label-medium">
+                                        @(@event.Title)
+                                    </div>
+                                    <div class="tnt-event-time tnt-body-small">
+                                        @(TimeOnly.FromDateTime(@event.OriginalEventStart.LocalDateTime).ToString("t")) - @(TimeOnly.FromDateTime(@event.OriginalEventEnd.LocalDateTime).ToString("t"))    
+                                    </div>
+                                </div>
+                            }
+                        }
+
                     </div>
                 }
             </div>
