Add event callbacks and drag-and-drop functionality
Updated Scheduler.razor to include new event callbacks (EventClickedCallback, EventSlotClickedCallback) and removed properties (FirstDate, DisabledDateTimes, fakeConsole). Added new methods in Scheduler.razor.cs for event handling. Enhanced ScheduleViewBase.cs with drag-and-drop methods and event callbacks. Updated TnTEvent.cs to make properties mutable and added new properties (TintColor, OnTintColor). Minor changes in TnTScheduler.razor and TnTScheduler.razor.cs, including new parameters and formatting adjustments. Enhanced TnTWeekView.razor with drag-and-drop functionality and updated CSS. Updated _layout.scss and _scheduler.scss for new styles.

--- a/LiveTest/LiveTest.Client/Pages/Scheduler.razor
+++ b/LiveTest/LiveTest.Client/Pages/Scheduler.razor
@@ -7,14 +7,12 @@
 <h3>Scheduler</h3>
 
 
-<TnTScheduler FirstDate="today"
-              TEventType="TnTEvent"
+<TnTScheduler TEventType="TnTEvent"
               Events="TasksList.ToArray()"
-              DisabledDateTimes="[TnTDisabledDateTime.DisabledDayOfWeek(TnTDayOfWeekFlag.Sunday | TnTDayOfWeekFlag.Saturday | TnTDayOfWeekFlag.Wednesday, new TimeOnly(0, 0), new TimeOnly(12, 0))]">
-    <TnTWeekView StartViewOn="DayOfWeek.Monday"
-                 DropEventCallback="@((TnTDropEventArgs<TnTEvent> args) => DropEvent(args))" />
+              EventClickedCallback="OnEventClicked"
+              EventSlotClickedCallback="OnEventSlotClicked">
+    <TnTWeekView StartViewOn="DayOfWeek.Monday" />
 </TnTScheduler>
 
 <br />
-<div class="console">@fakeConsole</div>
 
