--- a/TnTComponents/Scheduler/TnTScheduler.razor
+++ b/TnTComponents/Scheduler/TnTScheduler.razor
@@ -1,4 +1,5 @@
 ﻿@namespace TnTComponents
+@using Microsoft.AspNetCore.Components.Rendering
 @using TnTComponents.Core
 @typeparam TEventType
 @inherits TnTComponentBase
@@ -19,4 +20,3 @@
         @ChildContent
     </CascadingValue>
 </div>
-
