Enhance TnTWeekView and TnTScheduler functionality
Added a `Refresh` method to `TnTScheduler<TEventType>` to call `StateHasChanged` and refresh the view. Modified `TnTWeekView.razor` to conditionally display date headers based on the new `HideDates` parameter, and added an `@onclick` event handler to handle slot clicks. Updated the event click handler to stop event propagation. Reorganized layout dimension constants and moved `CalculateDateTimeOffset` method within `TnTWeekView<TEventType>`. Introduced `HeaderOverlapCount` and `WeekViewTnTEventComparer` classes for event comparison and overlap counting. Removed `StartTime` and `EndTime` properties from `WeekViewTnTEvent`.

--- a/TnTComponents/Scheduler/TnTWeekView.razor
+++ b/TnTComponents/Scheduler/TnTWeekView.razor
@@ -16,12 +16,22 @@
                 @foreach (var date in _visibleDates)
                 {
                     <h2 class="@($"tnt-date-header-item{(date == today ? " tnt-today" : string.Empty)}")">
-                        <div class="tnt-day-of-week tnt-label-small">
-                            @date.ToString("ddd").ToUpper()
-                        </div>
-                        <div class="tnt-date tnt-headline-small">
-                            @date.ToString("dd")
-                        </div>
+
+                        @if (HideDates)
+                        {
+                            <div class="tnt-day-of-week tnt-label-large">
+                                @date.ToString("ddd").ToUpper()
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="tnt-day-of-week tnt-label-small">
+                                @date.ToString("ddd").ToUpper()
+                            </div>
+                            <div class="tnt-date tnt-headline-small">
+                                @date.ToString("dd")
+                            </div>
+                        }
                     </h2>
                 }
             </div>
@@ -45,7 +55,8 @@
                 {
                     <div class="@($"tnt-event-column{(Scheduler.EventSlotClickedCallback.HasDelegate ? " tnt-interactable" : null)}")"
                          ondragover="event.preventDefault()"
-                         @ondrop="@((args => OnDropAsync(args, CalculateDateTimeOffset(args.OffsetY, date))))">
+                         @ondrop="@((args => OnDropAsync(args, CalculateDateTimeOffset(args.OffsetY, date))))"
+                         @onclick="@((args) => EventSlotClickedAsync(CalculateDateTimeOffset(args.OffsetY, date)))">
                         @if (_events.TryGetValue(date, out var eventList))
                         {
                             @foreach (var @event in eventList)
@@ -88,7 +99,7 @@
                                      ondragover="event.preventDefault()"
                                      ondrop="event.preventDefault()"
                                      @onclick="@(() => EventClickedAsync(@event.Event))"
-                                     @onclick:preventDefault="true"
+                                     @onclick:stopPropagation="true"
                                      @ondragstart="@((args) => OnDragStartAsync(args, @event.Event))"
                                      @ondragend="OnDragEndAsync">
                                     <div class="tnt-event-title tnt-label-medium">
