Refactor date handling and add event date visibility toggle
Refactored `TnTScheduler.razor` to use `UpdateDate` method for setting dates and updated `DateChangedCallback` to `EventCallback<DateOnly>`. Modified `UpdateDate` to pass date value to the callback. Added `HideEventDates` parameter to `TnTWeekView` to control event date visibility. Adjusted `.today-button` padding for small screens and prevented text wrapping in `.tnt-event-title` class in `_scheduler.scss`.

--- a/TnTComponents/Scheduler/TnTScheduler.razor
+++ b/TnTComponents/Scheduler/TnTScheduler.razor
@@ -13,7 +13,7 @@
                 TODAY
             </TnTButton>
             <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.ChevronRight })" OnClickCallback="NextPage" class="next-button" TextColor="@TextColor" />
-            <TnTInputDateTime @bind-Value:get="@Date" @bind-Value:set="@((DateOnly date) => Date = date)" BackgroundColor="@BackgroundColor" Label="Date Picker" />
+            <TnTInputDateTime @bind-Value:get="@Date" @bind-Value:set="@((DateOnly date) => UpdateDate(date))" BackgroundColor="@BackgroundColor" Label="Date Picker" />
         </div>
     }
     <CascadingValue Value="this" IsFixed="true">
