Enhance input UX and programmatic focus in typeahead
Improved the user experience in `_input.scss` by preventing text
selection within the input and changing the cursor to a text
cursor. Added `@ref` attribute to the input element in
`TnTTypeahead.razor` for programmatic access. Introduced a new
private field `_inputBox` in `TnTTypeahead.razor.cs` and
implemented programmatic focus on the input box after an item
is selected.

--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -15,6 +15,8 @@
     margin: 12px 8px 24px 8px;
     transition: 150ms ease-in-out;
     min-width: fit-content;
+    user-select: none;
+    cursor: text;
 
     input:-webkit-autofill,
     input:-webkit-autofill:hover,
