Add ShowDescription parameter to TnTWeekView component
Introduced a new feature in the TnTWeekView component to display event descriptions. This is controlled by a new boolean parameter `ShowDescription`.

Changes:
1. TnTWeekView.razor:
   - Added a conditional block to display event descriptions if `ShowDescription` is true.
   - Event descriptions are shown within a `div` element with the class `tnt-body-small`.

2. TnTWeekView.razor.cs:
   - Added a new `[Parameter]` property `ShowDescription` of type `bool` to control the visibility of event descriptions.

--- a/TnTComponents/Scheduler/TnTWeekView.razor
+++ b/TnTComponents/Scheduler/TnTWeekView.razor
@@ -111,6 +111,13 @@
                                             @(TimeOnly.FromDateTime(@event.Event.EventStart.LocalDateTime).ToString("t")) - @(TimeOnly.FromDateTime(@event.Event.EventEnd.LocalDateTime).ToString("t"))
                                         </div>
                                     }
+
+                                    @if (ShowDescription)
+                                    {
+                                        <div class="tnt-body-small">
+                                            @(@event.Event.Description)
+                                        </div>
+                                    }
                                 </div>
                             }
                         }
