--- a/TnTComponents/Scheduler/TnTWeekView.razor
+++ b/TnTComponents/Scheduler/TnTWeekView.razor
@@ -114,7 +114,7 @@
 
                                     @if (ShowDescription)
                                     {
-                                        <div class="tnt-body-small">
+                                        <div class="tnt-event-description tnt-body-small">
                                             @(@event.Event.Description)
                                         </div>
                                     }
