--- a/TnTComponents/Buttons/TnTButton.razor
+++ b/TnTComponents/Buttons/TnTButton.razor
@@ -5,18 +5,5 @@
 @implements ITnTStyleable
 
 
-<button @attributes="AdditionalAttributes"
-        class="@ElementClass"
-        type="@Type.ToHtmlAttribute()"
-        style="@ElementStyle"
-        name="@ElementName"
-        disabled="@Disabled"
-        autofocus="@AutoFocus"
-        title="@ElementTitle"
-        id="@ElementId"
-        @ref="Element"
-        @onclick="OnClickCallback"
-        @onclick:stopPropagation="StopPropagation">
-    @ChildContent
-</button>
+@Button
 
