Refactor data-permanent attribute placement
Moved data-permanent attribute from <div> in <DeferRendering> to <tnt-tab-view> to apply it to the entire tab view component.

--- a/TnTComponents/TabView/TnTTabView.razor
+++ b/TnTComponents/TabView/TnTTabView.razor
@@ -3,10 +3,10 @@
 @inherits TnTPageScriptComponent<TnTTabView>
 @namespace TnTComponents
 
-<tnt-tab-view @attributes=AdditionalAttributes class="@ElementClass" style="@ElementStyle" @ref="Element">
+<tnt-tab-view @attributes=AdditionalAttributes class="@ElementClass" style="@ElementStyle" @ref="Element" data-permanent>
     <CascadingValue Value="this" IsFixed="true">
         <DeferRendering>
-            <div data-permanent 
+            <div 
                 class="@(CssClassBuilder.Create().AddClass("tnt-tab-view-header").AddFilled().AddForegroundColor(HeaderTextColor).AddBackgroundColor(HeaderBackgroundColor).Build())">
                 <span class="tnt-tab-view-header-buttons">
 
