Enhance TnTLazyLoad and improve disposal handling
Added proper disposal of DotNetObjectRef in DisposeAsync methods of TnTInteractablePageScriptComponent and TnTPageScriptComponent classes. Modified TnTLazyLoad.razor to conditionally render elements based on _beginLoad state and introduced a new LoadingContent parameter. Added DynamicDependency attribute to preserve BeginLoad method during trimming and updated JSInvokable attribute usage. Enhanced onLoad function in TnTLazyLoad.razor.js to handle multiple elements and improved observer management. Updated namespaces and using directives for consistency.

--- a/TnTComponents/LazyLoader/TnTLazyLoad.razor
+++ b/TnTComponents/LazyLoader/TnTLazyLoad.razor
@@ -1,11 +1,17 @@
 ﻿@using TnTComponents.Core
 @implements IAsyncDisposable
+@namespace TnTComponents
 
-<div @ref="_element">
-    @if (_beginLoad)
-    {
-        @ChildContent
-    }
-</div>
+@if (!_beginLoad)
+{
+    <div @ref="_element">
+        @LoadingContent
+    </div>
+}
+
+@if (_beginLoad)
+{
+    @ChildContent
+}
 
 <TnTPageScript Src="@_jsModulePath" />
