--- a/TnTComponents/Styles/TnTComponents/_accordion.scss
+++ b/TnTComponents/Styles/TnTComponents/_accordion.scss
@@ -5,13 +5,14 @@
     .tnt-accordion-child {
         border-radius: inherit;
 
-        .tnt-accordion-header {
+        & > h3:first-child {
             border-radius: inherit;
             user-select: none;
             border-bottom: 1px solid $tnt-color-outline;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            margin: 0;
 
             h3 {
                 padding: 8px;
@@ -28,22 +29,17 @@
             }
         }
 
-        .tnt-accordion-content {
-            max-height: 80vh;
-            transition: max-height 250ms ease-in-out;
+        & > div:last-child {
             overflow: auto;
+            max-height: 80vh;
 
-            &.tnt-hidden {
-                max-height: 0px;
-                overflow: hidden;
+            &:not(.tnt-expanded) {
+                animation: 250ms ease-in-out forwards closeAccordion;
             }
-        }
 
-        &:not(:has(.tnt-hidden)) {
-            .tnt-accordion-header {
-                .tnt-icon {
-                    transform: rotateZ(180deg);
-                }
+            &.tnt-expanded {
+                display: block;
+                animation: 250ms ease-in-out forwards openAccordion;
             }
         }
 
@@ -54,16 +50,41 @@
         }
 
         &:last-child {
-            &:has(.tnt-hidden) {
+            &:has(div:last-child.tnt-expanded) {
+                border-radius: 0 0 8px 8px;
+
+                & > h3:first-child {
+                    border-end-start-radius: 0;
+                    border-end-end-radius: 0;
+                }
+            }
+
+            &:has(div:last-child:not(.tnt-expanded)) {
                 border-end-start-radius: 8px;
                 border-end-end-radius: 8px;
             }
-
-            &:not(:has(.tnt-hidden)) {
-                .tnt-accordion-content {
-                    border-radius: 0 0 8px 8px;
-                }
-            }
         }
+    }
+}
+
+
+@keyframes closeAccordion {
+    0% {
+        height: var(--content-height);
+    }
+
+    100% {
+        height: 0px;
+        display: none;
+    }
+}
+
+@keyframes openAccordion {
+    0% {
+        height: 0px;
+    }
+
+    100% {
+        height: var(--content-height);
     }
 }
