Refactor TnTAccordionChild and update accordion styles
Added `System.Runtime.InteropServices` to `TnTAccordionChild.cs` to support new functionality. Modified `TnTAccordionChild` class to set `_parent.FoundExpanded` to `true` if `OpenByDefault` is true. Updated `_accordion.scss` to refine styles: removed padding, margin, border-radius, and display properties from `h3` element, and added padding, box-sizing, and transition properties to the parent element. Rotated `.tnt-icon` by 180 degrees when the parent has a child with `.tnt-expanded` class. Adjusted border-radius for first and last child elements for proper rounding. Ensured `h3` within the last child resets border-radius when expanded.

--- a/TnTComponents/Styles/TnTComponents/_accordion.scss
+++ b/TnTComponents/Styles/TnTComponents/_accordion.scss
@@ -13,13 +13,9 @@
             justify-content: space-between;
             align-items: center;
             margin: 0;
-
-            h3 {
-                padding: 8px;
-                margin: 0;
-                border-radius: inherit;
-                display: inline-block;
-            }
+            padding: 0 8px;
+            box-sizing: border-box;
+            transition: border-radius 250ms linear;
 
             .tnt-icon {
                 padding: 8px;
@@ -43,25 +39,26 @@
             }
         }
 
-
-        &:first-child {
-            border-start-start-radius: 8px;
-            border-start-end-radius: 8px;
-        }
-
-        &:last-child {
-            &:has(div:last-child.tnt-expanded) {
-                border-radius: 0 0 8px 8px;
-
-                & > h3:first-child {
-                    border-end-start-radius: 0;
-                    border-end-end-radius: 0;
-                }
+        &:has(.tnt-expanded) {
+            .tnt-icon {
+                transform: rotateZ(180deg);
             }
+        }
+    }
 
-            &:has(div:last-child:not(.tnt-expanded)) {
-                border-end-start-radius: 8px;
-                border-end-end-radius: 8px;
+    & > div:first-child {
+        border-radius: 8px 8px 0 0;
+    }
+
+    & > div:last-child {
+        border-radius: 0 0 8px 8px;
+    }
+
+    &:has(.tnt-accordion-child:last-child .tnt-expanded) {
+        & > div:last-child {
+            h3 {
+                border-end-start-radius: 0;
+                border-end-end-radius: 0;
             }
         }
     }
