--- a/TnTComponents/Styles/TnTComponents/_accordion.scss
+++ b/TnTComponents/Styles/TnTComponents/_accordion.scss
@@ -40,27 +40,29 @@
         }
 
         &:has(.tnt-expanded) {
-            .tnt-icon {
+            & > h3 > .tnt-icon {
                 transform: rotateZ(180deg);
             }
         }
     }
 
-    & > div:first-child {
-        border-radius: 8px 8px 0 0;
-    }
-
     & > div:last-child {
-        border-radius: 0 0 8px 8px;
+        border-end-start-radius: 8px;
+        border-end-end-radius: 8px;
     }
 
     &:has(.tnt-accordion-child:last-child .tnt-expanded) {
         & > div:last-child {
-            h3 {
+            & > h3 {
                 border-end-start-radius: 0;
                 border-end-end-radius: 0;
             }
         }
+    }
+
+    & > div:first-child {
+        border-start-start-radius: 8px;
+        border-start-end-radius: 8px;
     }
 }
 
