--- a/TnTComponents/Styles/TnTComponents/_accordion.scss
+++ b/TnTComponents/Styles/TnTComponents/_accordion.scss
@@ -29,13 +29,21 @@
             overflow: auto;
             max-height: 80vh;
 
-            &:not(.tnt-expanded) {
+            &.tnt-collapsed {
                 animation: 250ms ease-in-out forwards closeAccordion;
             }
 
             &.tnt-expanded {
                 display: block;
-                animation: 250ms ease-in-out forwards openAccordion;
+
+                &:not(:has(.tnt-expanded)):not(:has(.tnt-collapsed)) {
+                    animation: 250ms ease-in-out forwards openAccordion;
+                }
+            }
+
+            &:not(.tnt-collapsed):not(.tnt-expanded) {
+                height: 0;
+                display: none;
             }
         }
 
@@ -51,7 +59,7 @@
         border-end-end-radius: 8px;
     }
 
-    &:has(.tnt-accordion-child:last-child .tnt-expanded) {
+    &:has(.tnt-accordion-child:last-child > .tnt-expanded) {
         & > div:last-child {
             & > h3 {
                 border-end-start-radius: 0;
