Refactor TnTAccordion component and enhance functionality
Updated TnTAccordion.razor to inherit from TnTPageScriptComponent<TnTAccordion> and replaced TnTPageScript with @PageScript. Added JsModulePath property in TnTAccordion.razor.cs to return the JavaScript module path, overriding the base class property. Introduced RegisterChild method to register child components and trigger state changes. Modified onUpdate function in TnTAccordion.razor.js to call the update method if it exists on the element.

--- a/TnTComponents/Accordion/TnTAccordion.razor
+++ b/TnTComponents/Accordion/TnTAccordion.razor
@@ -1,5 +1,5 @@
 ﻿@using TnTComponents.Core
-@inherits TnTComponentBase
+@inherits TnTPageScriptComponent<TnTAccordion>
 @namespace TnTComponents
 <CascadingValue IsFixed="true" Value="this">
     <tnt-accordion @attributes="AdditionalAttributes"
@@ -19,5 +19,4 @@
         @ChildContent
     </tnt-accordion>
 </CascadingValue>
-
-<TnTPageScript Src="./_content/TnTComponents/Accordion/TnTAccordion.razor.js" />
+@PageScript
