Add left border to non-first td/th elements in datagrid
Added a new CSS rule in `_datagrid.scss` to apply a 1px solid
left border to all `td` and `th` elements except the first
child. The border color is a mix of `$tnt-color-outline` at
20% and `$tnt-color-surface`.

--- a/TnTComponents/Styles/TnTComponents/_datagrid.scss
+++ b/TnTComponents/Styles/TnTComponents/_datagrid.scss
@@ -141,4 +141,10 @@
             }
         }
     }
+
+    tr {
+        td:not(:first-child), th:not(:first-child) {
+            border-left: 1px solid color-mix(in srgb, $tnt-color-outline 20%, $tnt-color-surface);
+        }
+    }
 }
